--- a/index.html
+++ b/index.html
@@ -83,12 +83,15 @@
                             <a href="detalhes/lirio.html">
                                 <div class="produto">
                                     <img src="imagens/lirio01.jpg" class="img-fluid" alt="lirio">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: Squarespace</small>
+                                    </a>
                                     <h3>Lírio da Paz</h3>
                                     <p>Os lírios são flores majestosas e elegantes, disponíveis em várias cores, 
                                         sendo o lírio branco um símbolo de pureza. 
                                         São frequentemente usados em arranjos de casamento e expressam beleza e refinamento.</p>
-                                    <p class="preco">Preço: R$ 69,90</p>
+                                    <p class="preco">Preço: R$ 120,00</p>
                                 </div>
                             </a>
                         </div>
@@ -96,12 +99,15 @@
                             <a href="detalhes/rosa.html">
                                 <div class="produto">
                                     <img src="imagens/rosa01.jpg" class="img-fluid" alt="rosa">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: weflores</small>
+                                    </a>
                                     <h3>Rosa Vermelha</h3>
                                     <p>As rosas são clássicas e apaixonamtes , simbolizando o amor e a paixão. 
                                         Disponíveis em uma variedade de cores, cada uma com seu próprio significado, 
                                         as rosas são as flores ideais para expressar sentimentos profundos.</p>
-                                    <p class="preco">Preço: R$ 69,90</p>
+                                    <p class="preco">Preço: R$ 150,00</p>
                                 </div>
                             </a>
                         </div>
@@ -109,7 +115,10 @@
                             <a href="detalhes/girassol.html">
                                 <div class="produto">
                                     <img src="imagens/girassol01.jpg" class="img-fluid" alt="girassol">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: netshopgarden</small>
+                                    </a>
                                     <h3>Girassol</h3>
                                     <p>Os girassóis são conhecidos por seguir o movimento do sol, 
                                         sempre virando-se em direção à luz. 
@@ -123,11 +132,14 @@
                             <a href="detalhes/clivia.html">
                                 <div class="produto">
                                     <img src="imagens/clivia01.jpg" alt="clivia">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: casaeconstrucao</small>
+                                    </a>
                                     <h3>Clivia</h3>
                                     <p>A clívia é uma planta de interior elegante e única, conhecida por suas flores alaranjadas e folhagem exuberante. 
                                         É perfeita para trazer um toque de natureza à sua casa ou escritório e prospera em ambientes com pouca luz.</p>
-                                    <p class="preco">Preço: R$ 49,90</p>
+                                    <p class="preco">Preço: R$ 89,90</p>
                                 </div>
                             </a>
                         </div>
@@ -135,7 +147,10 @@
                             <a href="detalhes/rosa do deserto.html">
                                 <div class="produto">
                                     <img src="imagens/rosa do deserto01.jpg" alt="rosa do deserto">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: encrypted-tbn0</small>
+                                    </a>
                                     <h3>Rosa do Deserto</h3>
                                     <p>A rosa do deserto, também conhecida como adenium, 
                                         é uma planta única com caudex inchado e flores exuberantes. 
@@ -149,7 +164,10 @@
                             <a href="detalhes/gerbera.html">
                                 <div class="produto">
                                     <img src="imagens/gerbera01.jpg" alt="gerbera">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: floriculturapaula</small>
+                                    </a>
                                     <h3>Gerbera</h3>
                                     <p>As gerberas são flores alegres com pétalas grandes e vibrantes em tons de rosa, laranja, vermelho e amarelo.
                                         Elas representam a inocência e a pureza e são uma opção popular para presentear alguém querido. .</p>
@@ -162,8 +180,6 @@
             </div>
         </main>
     </div>
-
-    <!-- Rodapé -->
     <div class="row">
         <div class="col text-center">
             <footer class="p-3">
