--- a/produtos.html
+++ b/produtos.html
@@ -82,12 +82,15 @@
                             <a href="detalhes/lirio.html">
                                 <div class="produto">
                                     <img src="imagens/lirio01.jpg" alt="Lírio da Paz">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: Squarespace</small>
+                                    </a>
                                     <h3>Lírio da Paz</h3>
                                     <p>Os lírios são flores majestosas e elegantes, disponíveis em várias cores, 
-                                        sendo o lírio branco um símbolo de pureza. 
+                                        sendo o lírio branco um símbolo da pureza. 
                                         São frequentemente usados em arranjos de casamento e expressam beleza e refinamento.</p>
-                                    <p class="preco">Preço: R$ 69,90</p>
+                                    <p class="preco">Preço: R$ 120,00</p>
                                 </div>
                             </a>
                         </div>
@@ -95,12 +98,15 @@
                             <a href="detalhes/rosa.html">
                                 <div class="produto">
                                     <img src="imagens/rosa01.jpg" class="img-fluid" alt="rosa">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: Freepik</small>
+                                    </a>
                                     <h3>Rosa Vermelha</h3>
                                     <p>As rosas são clássicas e apaixonamtes , simbolizando o amor e a paixão. 
                                         Disponíveis em uma variedade de cores, cada uma com seu próprio significado, 
                                         as rosas são as flores ideais para expressar sentimentos profundos.</p>
-                                    <p class="preco">Preço: R$ 69,90</p>
+                                    <p class="preco">Preço: R$ 150,00</p>
                                 </div>
                             </a>
                         </div>
@@ -108,7 +114,10 @@
                             <a href="detalhes/amarilis.html">
                                 <div class="produto">
                                     <img src="imagens/amarilis01.jpg" alt="Amarílis">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: dcu3z7fnvhgqn</small>
+                                    </a>
                                     <h3>Amarílis</h3>
                                     <p>As flores do Amarílis vêm em uma variedade de cores deslumbrantes, 
                                         incluindo vermelho, rosa, branco, amarelo e laranja, permitindo que você escolha a tonalidade que melhor se adapta à sua mensagem ou decoração. 
@@ -121,11 +130,14 @@
                             <a href="detalhes/clivia.html">
                                 <div class="produto">
                                     <img src="imagens/clivia01.jpg" alt="Clívia">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: casaeconstrucao</small>
+                                    </a>
                                     <h3>Clívia</h3>
                                     <p>A clívia é uma planta de interior elegante e única, conhecida por suas flores alaranjadas e folhagem exuberante. 
                                         É perfeita para trazer um toque de natureza à sua casa ou escritório e prospera em ambientes com pouca luz.</p>
-                                    <p class="preco">Preço: R$ 49,90</p>
+                                    <p class="preco">Preço: R$ 89,90</p>
                                 </div>
                             </a>
                         </div>
@@ -133,7 +145,10 @@
                             <a href="detalhes/bromelia.html">
                                 <div class="produto">
                                     <img src="imagens/bromelia01.jpg" alt="Bromélia">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: st.depositphoto</small>
+                                    </a>
                                     <h3>Bromélia</h3>
                                     <p>A bromélia é uma planta tropical que se destaca pelas suas folhas exóticas e cores vibrantes. 
                                         Ela adiciona um toque de exotismo e elegância a qualquer espaço. As bromélias são resistentes e fáceis de cuidar,
@@ -146,7 +161,10 @@
                             <a href="detalhes/gazania.html">
                                 <div class="produto">
                                     <img src="imagens/gazania01.jpg" alt="Gazânia">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: mobileimages.lowes</small>
+                                    </a>
                                     <h3>Gazânia</h3>
                                     <p>A gazânia é uma flor radiante e resistente, apreciada por suas pétalas brilhantes e aparência semelhante a uma margarida. 
                                         Ela adiciona cor e vitalidade a jardins e canteiros. 
@@ -159,7 +177,10 @@
                             <a href="detalhes/crisantemo.html">
                                 <div class="produto">
                                     <img src="imagens/crisantemo01.jpg" alt="Crisântemo">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: hips.hearstapps</small>
+                                    </a>
                                     <h3>Crisântemo</h3>
                                     <p>Os crisântemos, muitas vezes chamados de "crisântemos de outono", 
                                         são flores tradicionais e populares, disponíveis em diversas cores. 
@@ -172,7 +193,10 @@
                             <a href="detalhes/dalia.html">
                                 <div class="produto">
                                     <img src="imagens/dalia01.jpg" alt="Dália">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: i.pinimg</small>
+                                    </a>
                                     <h3>Dália</h3>
                                     <p>As dálias são flores impressionantes e cheias de personalidade. 
                                         Elas vêm em uma variedade de cores e tamanhos, tornando-as versáteis para qualquer arranjo.
@@ -185,10 +209,13 @@
                             <a href="detalhes/gerbera.html">
                                 <div class="produto">
                                     <img src="imagens/gerbera01.jpg" alt="Gerbera">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: floriculturapaula</small>
+                                    </a>
                                     <h3>Gerbera</h3>
                                     <p>As gerberas são flores alegres com pétalas grandes e vibrantes em tons de rosa, laranja, vermelho e amarelo.
-                                        Elas representam a inocência e a pureza e são uma opção popular para presentear alguém querido.</p>
+                                        Elas representam a delicadeza e a pureza e são uma opção popular para presentear alguém querido.</p>
                                     <p class="preco">Preço: R$ 19,90</p>
                                 </div>
                             </a>
@@ -197,7 +224,10 @@
                             <a href="detalhes/girassol.html">
                                 <div class="produto">
                                     <img src="imagens/girassol01.jpg" alt="Girassol">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: netshopgarden</small>
+                                    </a>
                                     <h3>Girassol</h3>
                                     <p>Os girassóis são conhecidos por seguir o movimento do sol, 
                                         sempre virando-se em direção à luz. 
@@ -211,7 +241,10 @@
                             <a href="detalhes/margarida.html">
                                 <div class="produto">
                                     <img src="imagens/margarida01.jpg" alt="Margarida">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: i.pinimg</small>
+                                    </a>
                                     <h3>Margarida</h3>
                                     <p>A margarida é uma flor encantadora que simboliza a inocência e a pureza. 
                                         Suas pétalas brancas e centros amarelos trazem um toque de frescor e simplicidade a qualquer ambiente. 
@@ -221,10 +254,13 @@
                             </a>
                         </div>
                         <div class="col col-sm-6 col-md-4">
-                            <a href="detalhes/rosa-do-deserto.html">
+                            <a href="detalhes/rosa-do-deserto01.html">
                                 <div class="produto">
                                     <img src="imagens/rosa do deserto01.jpg" alt="Rosa do Deserto">
-                                    <br><small>Fonte da Image: Freepik</small>
+                                    <br>
+                                    <a href="" target="_blank">
+                                        <small>Fonte da Image: encrypted-tbno</small>
+                                    </a>
                                     <h3>Rosa do Deserto</h3>
                                     <p>A rosa do deserto, também conhecida como adenium, 
                                         é uma planta única com caudex inchado e flores exuberantes. 
@@ -240,8 +276,6 @@
         </main>
 
     </div>
-
-    <!-- Rodapé -->
     <div class="row">
         <div class="col text-center">
             <footer class="p-3">
