--- a/sobre.html
+++ b/sobre.html
@@ -82,17 +82,17 @@
             <div class="row">
                 <div class="col text-break">
                     <p class="paragrafo-sobre"> 
-                        Meu nome é Cleide Jane Pinheiro, tenho 35 anos, casada , tenho 1 filho.Sou formada em Administraçao, no momento sou dona de casa e amo essa função. 
+                        Meu nome é Cleide Jane Pinheiro, tenho 35 anos, casada , tenho 1 filho.Sou formada em Administração, no momento sou dona de casa e amo essa função. 
                         <br>
-                        Entrei nessa área por incentivo do meu marido que desde quando nos conhecemos essa é a area dele, e também queria começar a fazer algo novo, estava procurando uma pôs para fazer, 
-                        começca a estuda em uma area diferente da minha
-                        quando ele falou pra começar a estuda na área de ti pra vê se eu iria gostar, na procura da pos, vi esse curso no site dos correios da Bahia,as inscriçoês ainda iriam abrir e decidir me 
+                        Entrei nessa área por incentivo do meu marido que desde quando nos conhecemos essa é a área dele, e também queria começar a fazer algo novo, estava procurando uma pôs para fazer, 
+                        começar a estuda em uma área diferente da minha
+                        quando ele falou pra começar a estuda na área de ti pra vê se eu iria gostar, na procura da pós, vi esse curso no site dos correios da Bahia,as inscriçoês ainda iriam abrir e decidir me 
                         escrever, me escrevir e conseguir entra na turma das sincronas. 
                         <br><br> 
                         Minha experiencia com o curso foi boa, uma área bastante dinâmica, bem diferente de tudo que eu ja vi, teve dias bem complicados, mas faz parte sempre
                         quando começamos algo novo, gostei bastante da minha professora Cybele e a monitora Erica, pessoas profissionais, e que passam o estudo de uma forma bem clara e tambem são muito atenciosas e gentis.
                         Pretendo continuar estudando, buscando conhecimento e lá na frente trabalhar nessa área.
-                        Tudo posso Naquele que me fortalesse.Filipenses 4:13
+                        "Tudo posso Naquele que me fortalesse".Filipenses 4:13
                     </p>
                 </div>
             </div>
